@@ -83,43 +83,6 @@ class BSDSpecificTestCase(unittest.TestCase):
             self.fail("sysctl=%s; psutil=%s; difference=%s;" %(
                       sysctl_avail_phymem, psutil_avail_phymem, difference))
 
-    def test_total_virtmem(self):
-        # This test is not particularly accurate and may fail if the OS is
-        # consuming memory for other applications.
-        # We just want to test that the difference between psutil result
-        # and sysctl's is not too high.
-        p = subprocess.Popen("sysctl vm.vmtotal", shell=1, stdout=subprocess.PIPE)
-        result = p.communicate()[0].strip()
-        if PY3:
-            result = str(result, sys.stdout.encoding)
-        sysctl_total_virtmem, _ = parse_sysctl_vmtotal(result)
-        psutil_total_virtmem = psutil.virtmem_usage().total
-        difference = abs(sysctl_total_virtmem - psutil_total_virtmem)
-
-        # On my system I get a difference of 4657152 bytes, probably because
-        # the system is consuming memory for this same test.
-        # Assuming psutil is right, let's use a tollerance of 10 MB and consider
-        # the test as failed if we go over it.
-        if difference > (10 * 2**20):
-            self.fail("sysctl=%s; psutil=%s; difference=%s;" %(
-                       sysctl_total_virtmem, psutil_total_virtmem, difference))
-
-    def test_avail_virtmem(self):
-        # This test is not particularly accurate and may fail if the OS is
-        # consuming memory for other applications.
-        # We just want to test that the difference between psutil result
-        # and sysctl's is not too high.
-        p = subprocess.Popen("sysctl vm.vmtotal", shell=1, stdout=subprocess.PIPE)
-        result = p.communicate()[0].strip()
-        if PY3:
-            result = str(result, sys.stdout.encoding)
-        _, sysctl_avail_virtmem = parse_sysctl_vmtotal(result)
-        psutil_avail_virtmem = psutil.virtmem_usage().free
-        difference = abs(sysctl_avail_virtmem - psutil_avail_virtmem)
-        # let's assume the test is failed if difference is > 0.5 MB
-        if difference > (0.5 * 2**20):
-            self.fail(difference)
-
     def test_process_create_time(self):
         cmdline = "ps -o lstart -p %s" %self.pid
         p = subprocess.Popen(cmdline, shell=1, stdout=subprocess.PIPE)
