@@ -48,6 +48,8 @@ BUGFIXES
    which create or manipulate Python objects leading to potential memory related
    errors and/or segmentation faults.
  * Issue 307: (BSD) values returned by psutil.network_io_counters() are wrong.
+ * Issue 308: (BSD) psutil.virtmem_usage() wasn't actually returning 
+   information about swap memory usage. It does now.
 
 
 0.5.1 - 2012-06-29
